Fix background fix issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	background-attachment: fixed;
+	/*background-attachment: fixed;*/
 	padding: 180px 0;
 }
 
